# app/Http/Controllers/LocalConextController.php
@@ -70,6 +70,61 @@ class LocalConextController extends Controller
     {
         $this->localConextService = $localConextService;
     }
+        /**
+     *
+     * @OA\Get(
+     *     tags={"Local-conexts"},
+     *     path="/api/admin/local-conexts",
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *             )
+     *         }
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad Request",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *             )
+     *         }
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Local conext not found",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *             )
+     *         }
+     *     ),
+     *     @OA\Response(
+     *         response=405,
+     *         description="Validation exception",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *             )
+     *         }
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal Server Error",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *             )
+     *         }
+     *     ),
+     *     security={
+     *         {"bearer": {}}
+     *     } 
+     * )
+     */
     public function index()
     {
         return $this->localConextService->getLocalConexts();
@@ -165,7 +220,10 @@ class LocalConextController extends Controller
      *                 mediaType="application/json",
      *             )
      *         }
-     *     )
+     *     ),
+     *     security={
+     *         {"bearer": {}}
+     *     } 
      * )
      */
     public function store(Request $request)
@@ -256,7 +314,10 @@ class LocalConextController extends Controller
      *                 mediaType="application/json",
      *             )
      *         }
-     *     )
+     *     ),
+     *     security={
+     *         {"bearer": {}}
+     *     } 
      * )
      */
     public function update(Request $request, $id)
@@ -329,7 +390,10 @@ class LocalConextController extends Controller
      *                 mediaType="application/json",
      *             )
      *         }
-     *     )
+     *     ),
+     *     security={
+     *         {"bearer": {}}
+     *     } 
      * )
      */
     public function destroy($id)
